<resources>
    <string name="app_name">NTBase</string>
    <string name="test_api">Test Api</string>
    <string name="about">About Api</string>
    <string name="article">Article Api</string>
    <string name="core">Core Api</string>
    <string name="file">File Api</string>
    <string name="model">Model Api</string>
    <string name="news">News Api</string>
    <string name="pooling">Pooling Api</string>
    <string name="ticket">Ticket Api</string>
    <string name="utill">Utill Api</string>
    <string name="get_content_list">Get Content List Api</string>
    <string name="get_content_view">Get Content View Api</string>
    <string name="get_tag_list">Get Tag List Api</string>
    <string name="get_category_list">Get Category List Api</string>
    <string name="get_other_info">Get Other Info Api</string>
    <string name="get_comment_list">Get Comment List Api</string>
    <string name="set_comment">Set Comment Api</string>
    <string name="get_comment_view">Get Comment View Api</string>
    <string name="set_favorite">Set Favorite Api</string>
    <string name="body">Body </string>
    <string name="row_per_page">Row Per Page :</string>
    <string name="sort_type">Sort Type :</string>
    <string name="skip_row_data">Skip Row Data :</string>
    <string name="current_page_number">Current Page Number :</string>
    <string name="sort_column">Sort Column :</string>
    <string name="submit">Submit</string>
    <string name="id">id :</string>
    <string name="tag_id">Tag Id :</string>
    <string name="content_id">Content Id :</string>
    <string name="action_client_order">Action Client Order :</string>
    <string name="category_id">Category Id :</string>
    <string name="favorit_category_id">Category Id :</string>
    <string name="link_parent_id">Link Parent Id :</string>
    <string name="link_category_tag_id">Link Category Tag Id :</string>
    <string name="add">add</string>
    <string name="lik_dislike">Lik/DisLike :</string>
    <string name="dislike">DisLike</string>
    <string name="like">Like</string>
    <string name="search">Search :</string>
    <string name="writer">Writer :</string>
    <string name="comment">Comment :</string>
    <string name="link_content_id">Link Content Id :</string>
    <string name="comment_link_parent_id">Link Parent Id :</string>
    <string name="votes">Votes :</string>
    <string name="option_id">Option Id</string>
    <string name="title">Title :</string>
    <string name="default_answer_body">Default Answer Body :</string>
    <string name="priority">Priority :</string>
    <string name="access_to_change_type">Access To Change Type :</string>
    <string name="name">Name :</string>
    <string name="email">Email :</string>
    <string name="phone_no">Phone No :</string>
    <string name="upload_name">Upload Name :</string>
    <string name="tick_priority">Priority :</string>
    <string name="html_body">HTML Body :</string>
    <string name="link_member_user_id">Link Member User Id :</string>
    <string name="link_ticketing_departemen_id">Link Ticketing Departemen Id :</string>
    <string name="ticket_status">Ticket Status :</string>
    <string name="user_ip_address">User Ip Address :</string>
    <string name="device_information">Device Information :</string>
    <string name="ticketing_id">Ticketing Id :</string>
    <string name="link_ticket_id">Link Ticket Id :</string>
    <string name="score_percent">Score Percent :</string>
    <string name="score_comment">Score Comment :</string>
    <string name="content_type">Content-Type :</string>
    <string name="package_name">Package Name :</string>
    <string name="layout">layout :</string>
    <string name="application_json">application/json</string>
    <string name="url">URL :</string>
</resources>
