<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/standard_padding"
    android:orientation="vertical"
    tools:context="activity.pooling.ActSetSubmitPooling">

    <include layout="@layout/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/extra_padding"
        android:orientation="horizontal">

        <TextView
            style="@style/titleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/extra_padding"
            android:text="@string/body" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="@android:color/darker_gray" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/extra_padding"
        android:orientation="horizontal">

        <TextView
            style="@style/titleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_id" />

        <EditText
            android:id="@+id/ContentId"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/extra_padding"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            style="@style/titleStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center_vertical"
            android:text="@string/votes" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:orientation="vertical">

            <EditText
                android:id="@+id/OptionId"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/extra_padding"
                android:gravity="center"
                android:hint="@string/option_id"
                android:inputType="number" />

            <EditText
                android:id="@+id/OptionScore"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="Option Score"
                android:inputType="number" />
        </LinearLayout>

        <Button
            android:id="@+id/voteAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/colorPrimary"
            android:text="@string/add"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false" />

    </LinearLayout>

    <include layout="@layout/button" />

</LinearLayout>
