<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/extra_padding"
            android:orientation="horizontal">

            <TextView
                style="@style/titleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/extra_padding"
                android:text="@string/body" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/darker_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/extra_padding"
            android:orientation="horizontal">

            <TextView
                style="@style/titleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/row_per_page" />

            <EditText
                android:id="@+id/row_per_page_text"
                style="@style/textStyle"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="20" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_marginBottom="@dimen/extra_padding"
            android:orientation="horizontal">

            <TextView
                style="@style/titleStyle"
                android:layout_width="0dp"
                android:layout_weight=".7"
                android:layout_height="wrap_content"
                android:text="@string/sort_type" />

            <Spinner
                android:id="@+id/sort_type_spinner"
                style="@style/textStyle"
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/extra_padding" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/extra_padding"
            android:orientation="horizontal">

            <TextView
                style="@style/titleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip_row_data" />

            <EditText
                android:id="@+id/skip_row_data_text"
                style="@style/textStyle"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/extra_padding"
            android:orientation="horizontal">

            <TextView
                style="@style/titleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_page_number" />

            <EditText
                android:id="@+id/current_page_number_text"
                style="@style/textStyle"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/extra_padding"
            android:orientation="horizontal">

            <TextView
                style="@style/titleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_column" />

            <EditText
                android:id="@+id/sort_column_text"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="id" />
        </LinearLayout>

    </LinearLayout>